# CKKS-attack

./: .gitmodules  CMakeLists.txt  atkimpl.md  defense.md  heaantest.py  monte-carlo result.txt
go_atk/: go.mod  go.sum  test.go
my_code/: examples.h  gf2invtest.cpp  heaanmain.cpp  heaanrnsmain.cpp  helibattack.cpp  helibattack.h  helibmain.cpp  palisademain.cpp  sealattack.cpp  sealattack.h  sealmain.cpp  tr9valid.cpp  utils.cpp  utils.h
my_code/tclap/: Makefile
patches/: 0001-add-function-for-noise-estimation-experiment.patch  0001-add-functions-for-ckks-key-recovery.patch
